@@ -34,14 +34,25 @@ Testing
 Build system
 ------------
 
+
 Fixed bugs
 ----------
 
+- SingletonCols: normalize if substituting constraint in the objective (primal-postsolve only)
 - Postsolve: round primal solution values close to zero when substituting
 - VeriPB: encode INFINITY differently tp prevent SIGSEV if executed in Rational
 
+
 Miscellaneous
 -------------
+
+
+Known issues
+------------
+
+- SingletonCols: normalize if substituting constraint in the objective (when dual-postsolve is active)
+
+
 
 @section RN221 PaPILO 2.2.1
 ***************************
